# Cigo-API-Library

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
cigo_wrapper/: __init__.py
cigo_wrapper/entity/: Itinerary.py  Job.py  JobAction.py  JobConfirmationStatus.py  JobGeocoding.py  JobProgress.py  JobRoute.py  VehicleTracking.py
cigo_wrapper/network/: CigoConnect.py
entity/: ActionStatus.py  Itinerary.py  JobActionType.py  JobSearch.py  JobStatus.py
network/: CigoConnect.py
